tests/invalid/annotation_subscript_value_not_name/main.py
import provider


def main() -> None:
    x: provider.Box[int] = 1
